samples/_failures_safe/1761044952_5310e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28c3bc63.c: In function ‘main’:
./samples/SAFE/__tmp_28c3bc63.c:142:16: error: missing terminating " character
  142 |         printf("Enter columns for matrix B (1-%
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_28c3bc63.c:142:9: error: expected expression at end of input
  142 |         printf("Enter columns for matrix B (1-%
      |         ^~~~~~
./samples/SAFE/__tmp_28c3bc63.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_28c3bc63.c:142:9: error: expected declaration or statement at end of input
